# swagger.json
@@ -64,11 +64,11 @@
         }
       },
       "post": {
-        "summary": "create component operation",
-        "operationId": "createComponent",
-        "tags": ["component, tag"],
+        "summary": "create user operation",
+        "operationId": "createUser",
+        "tags": ["user, tag"],
         "requestBody": {
-          "description": "create component post request",
+          "description": "create user post request",
           "required": true,
           "content": {
             "application/json": {
@@ -111,6 +111,77 @@
           }
         }
       }
+    },
+    "/users/{id}": {
+      "get": {
+        "summary": "get user by id",
+        "operationId": "readUserById",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "User Id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          }
+        ],
+        "tags": ["asset"],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payload"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payload"
+                }
+              }
+            }
+          }
+        }
+      },
+        "responses": {
+          "201": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payload"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payload"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Payload"
+                }
+              }
+            }
+          }
+        }
     },
     "/components/{component_uuid}": {
       "put": {
@@ -243,7 +314,6 @@
             "type": "object",
             "required": ["data"],
             "properties": {
-              "data": {},
               "error": {
                 "$ref": "#/components/schemas/Error"
               }
@@ -268,33 +338,13 @@
           "dataContentType"
         ],
         "properties": {
-          "specVersion": {
-            "type": "string",
-            "example": "1.0.0"
-          },
-          "type": {
-            "description": "Operation:(Get) EntityType: (TsRead)",
-            "type": "string",
-            "example": "<Operation>-<EntityType>-req"
-          },
-          "source": {
-            "description": "The source system (client) initiating this request",
-            "type": "string",
-            "example": "intellija-ui"
-          },
           "id": {
-            "description": "Unique ID generated by the system that created this request",
-            "type": "string",
-            "example": "C234-1234-1234"
+            "type": "integer",
+            "example": "101"
           },
-          "time": {
-            "description": "Time in ISO 8601 format when request created",
+          "name": {
             "type": "string",
-            "example": "2020-03-31T17:31:00.123Z"
-          },
-          "dataContentType": {
-            "type": "string",
-            "example": "application/json"
+            "example": "UserName"
           }
         }
       },
